policies/containerlimits/constraint_pkg/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-allowed
  labels:
    owner: suraj.gcr.opa
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "100m"
          memory: "1Gi"
